exports[`App runs my test 1`] = `
<div>
  <ViewSelector
    onViewSelect={[Function]} />
  <ViewDisplay
    resource={
      Object {
        "description": "Isn\'t it fuzzy-wuzzy cutest thing you\'ve ever seen?",
        "title": "Cute Bunny",
        "url": "http://f.cl.ly/items/3g3J1G0w122M360w380O/3726490195_f7cc75d377_o.jpg",
      }
    }
    selectedView="" />
</div>
`;

exports[`GalleryView displays list 1`] = `
<div>
  <p>
    Title: 
    a
  </p>
  <img
    alt="Cute Bunny"
    className="gallery"
    src="b" />
  <p>
    Description: 
    c
  </p>
</div>
`;

exports[`ListView displays list 1`] = `
<div>
  <p>
    Title: 
    a
  </p>
  <p>
    Url: 
    b
  </p>
  <p>
    Description: 
    c
  </p>
</div>
`;

exports[`ThumbnailView displays list 1`] = `
<div>
  <p>
    Title: 
    a
  </p>
  <img
    alt="Cute Bunny"
    className="thumbnail"
    src="b" />
</div>
`;
